k8s/ingress-to-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-gateway
  namespace: default
spec:
  gatewayClassName: eg
  listeners:
  - name: http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-ingress-all-hosts
  namespace: default
spec:
  parentRefs:
  - name: eg-gateway
  rules:
  - backendRefs:
    - name: nginx-service
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
